--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@near-wallet-selector/core": "^7.2.0",
+    "@near-wallet-selector/default-wallets": "^7.2.0",
+    "@near-wallet-selector/modal-ui": "^7.2.0",
+    "@near-wallet-selector/near-wallet": "^7.2.0",
+    "@near-wallet-selector/wallet-connect": "^7.2.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
@@ -16,6 +21,7 @@
     "ethers": "^5.7.1",
     "ethers-multicall": "^0.2.3",
     "mutationobserver-shim": "^0.3.7",
+    "near-api-js": "^0.44.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
